--- a/index.html
+++ b/index.html
@@ -5,9 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissor</title>
+    <link rel="stylesheet" href="styles.css" />
     <script src="script.js" defer></script>
   </head>
   <body>
-    <h1>Open your console and play the game!</h1>
+    <div class="container">
+      <h1>Rock Paper Scissors</h1>
+      <button>Rock</button>
+      <button>Paper</button>
+      <button>Scissors</button>
+      <p>PlayerScore:</p>
+      <p>ComputerScore</p>
+    </div>
   </body>
 </html>
