Add classes to elements

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
   <body>
     <div class="container">
       <h1>Rock Paper Scissors</h1>
-      <button>Rock</button>
-      <button>Paper</button>
-      <button>Scissors</button>
-      <p>PlayerScore:</p>
-      <p>ComputerScore</p>
+      <div class="choices">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+      </div>
+      <p class="player-score-board">PlayerScore:</p>
+      <p class="computer-score-board">ComputerScore:</p>
     </div>
   </body>
 </html>
