Change classname on buttons

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="container">
       <h1>Rock Paper Scissors</h1>
       <div class="choices">
-        <button class="rock">Rock</button>
-        <button class="paper">Paper</button>
-        <button class="scissors">Scissors</button>
+        <button class="rock-btn">Rock</button>
+        <button class="paper-btn">Paper</button>
+        <button class="scissors-btn">Scissors</button>
       </div>
       <p class="player-score-board">PlayerScore:</p>
       <p class="computer-score-board">ComputerScore:</p>
