Add p tag to store round winner

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       </div>
       <p class="player-score-board">PlayerScore:</p>
       <p class="computer-score-board">ComputerScore:</p>
+      <p class="round-winner"></p>
     </div>
   </body>
 </html>
